--- a/BeamWallet/ViewControllers/Main/Passwords/UnlockPasswordPopover.xib
+++ b/BeamWallet/ViewControllers/Main/Passwords/UnlockPasswordPopover.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,6 +19,7 @@
             <connections>
                 <outlet property="height" destination="1IF-nd-Kof" id="wD0-mn-dAt"/>
                 <outlet property="loginLabel" destination="Ki5-En-Qdu" id="4fF-Lp-1Cg"/>
+                <outlet property="mainView" destination="wTS-V4-pfR" id="UmR-B0-VdC"/>
                 <outlet property="passField" destination="AVa-L4-vq8" id="GzS-gH-Y1H"/>
                 <outlet property="touchIdButton" destination="LLf-oV-Bd8" id="sR0-H4-Ss0"/>
                 <outlet property="view" destination="zZr-vH-VHx" id="cVs-sK-FDY"/>
@@ -30,14 +30,6 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KWU-Kc-dcT">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ng4-61-7di">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    </view>
-                    <blurEffect style="light"/>
-                </visualEffectView>
                 <view verifyAmbiguity="off" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="wTS-V4-pfR" customClass="BaseView" customModule="BeamWallet" customModuleProvider="target">
                     <rect key="frame" x="15" y="44" width="290" height="360"/>
                     <subviews>
@@ -149,12 +141,8 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="KWU-Kc-dcT" secondAttribute="bottom" id="6Uv-un-LrZ"/>
-                <constraint firstAttribute="trailing" secondItem="KWU-Kc-dcT" secondAttribute="trailing" id="8hf-ix-mk0"/>
                 <constraint firstItem="wTS-V4-pfR" firstAttribute="centerY" secondItem="zZr-vH-VHx" secondAttribute="centerY" constant="-60" id="Fr7-Fa-2sr"/>
-                <constraint firstItem="KWU-Kc-dcT" firstAttribute="leading" secondItem="zZr-vH-VHx" secondAttribute="leading" id="T5S-7i-7X2"/>
                 <constraint firstAttribute="trailing" secondItem="wTS-V4-pfR" secondAttribute="trailing" constant="15" id="UQU-Uv-orh"/>
-                <constraint firstItem="KWU-Kc-dcT" firstAttribute="top" secondItem="zZr-vH-VHx" secondAttribute="top" id="g7y-Co-UsR"/>
                 <constraint firstItem="wTS-V4-pfR" firstAttribute="leading" secondItem="zZr-vH-VHx" secondAttribute="leading" constant="15" id="sKK-ZQ-CW8"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="XP9-DS-x54"/>
