--- a/BeamWallet/ViewControllers/Main/QRCode/QRViewController.xib
+++ b/BeamWallet/ViewControllers/Main/QRCode/QRViewController.xib
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -35,7 +32,6 @@
                 <outlet property="scrollView" destination="qKA-eP-as8" id="XCA-Yy-oSd"/>
                 <outlet property="shareAddress" destination="loc-1l-wZa" id="Klh-zY-i6f"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="visualEffectView" destination="gup-8f-fPc" id="X4J-Kl-fTh"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -43,14 +39,6 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gup-8f-fPc">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Sw7-Qx-ZgL">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    </view>
-                    <blurEffect style="light"/>
-                </visualEffectView>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qKA-eP-as8">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 </scrollView>
@@ -222,11 +210,7 @@ Please notice, that both you and sender should be online to succeed transaction!
                 <constraint firstAttribute="bottom" secondItem="qKA-eP-as8" secondAttribute="bottom" id="6AH-Pp-mwH"/>
                 <constraint firstItem="soS-x3-QUu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="DYf-E2-YaM"/>
                 <constraint firstItem="qKA-eP-as8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="MCX-PQ-jik"/>
-                <constraint firstAttribute="bottom" secondItem="gup-8f-fPc" secondAttribute="bottom" id="Nnd-Ok-swi"/>
-                <constraint firstAttribute="trailing" secondItem="gup-8f-fPc" secondAttribute="trailing" id="ToF-7p-vb1"/>
                 <constraint firstItem="qKA-eP-as8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="VEP-eE-ceP"/>
-                <constraint firstItem="gup-8f-fPc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Zc1-j1-vRj"/>
-                <constraint firstItem="gup-8f-fPc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="fYb-3M-yeJ"/>
                 <constraint firstItem="soS-x3-QUu" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="iWt-jz-xF4"/>
                 <constraint firstAttribute="trailing" secondItem="soS-x3-QUu" secondAttribute="trailing" constant="15" id="r3n-4E-Wgu"/>
                 <constraint firstAttribute="trailing" secondItem="qKA-eP-as8" secondAttribute="trailing" id="v5Y-kW-Fln"/>
