--- a/BeamWallet/ViewControllers/Main/Wallet/Send/InputFeePopover.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Send/InputFeePopover.xib
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,9 +22,9 @@
             <connections>
                 <outlet property="feeField" destination="YOk-TX-DM6" id="TeB-k6-DB2"/>
                 <outlet property="grothTitleLabelY" destination="bbC-sr-h4m" id="IWv-w4-KcU"/>
+                <outlet property="mainView" destination="tFf-TN-Dqo" id="yEH-Tn-Tvm"/>
                 <outlet property="titleLabel" destination="6VT-6U-Hnp" id="yNc-wz-gBf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="visualView" destination="HKO-EM-dzb" id="DWn-9K-j80"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -35,14 +32,6 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HKO-EM-dzb">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Zck-xQ-YKt">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    </view>
-                    <blurEffect style="light"/>
-                </visualEffectView>
                 <view verifyAmbiguity="off" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="tFf-TN-Dqo" customClass="BaseView" customModule="BeamWallet" customModuleProvider="target">
                     <rect key="frame" x="20" y="253" width="374" height="270"/>
                     <subviews>
@@ -167,15 +156,12 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="HKO-EM-dzb" secondAttribute="bottom" id="5Rj-fB-LOC"/>
-                <constraint firstItem="HKO-EM-dzb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="BVD-1p-PkH"/>
                 <constraint firstItem="tFf-TN-Dqo" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="Q5Z-f2-o93"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="HKO-EM-dzb" secondAttribute="trailing" id="STT-L6-ir4"/>
                 <constraint firstItem="tFf-TN-Dqo" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-60" id="WWV-ok-AKl"/>
-                <constraint firstItem="HKO-EM-dzb" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Y2k-X5-XE3"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="tFf-TN-Dqo" secondAttribute="trailing" constant="20" id="rnO-Kk-nxO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="139" y="98"/>
         </view>
     </objects>
     <resources>
