--- a/BeamWallet/ViewControllers/Main/Passwords/CreateWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Main/Passwords/CreateWalletPasswordViewController.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -51,7 +50,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vKG-Rj-luv">
-                                    <rect key="frame" x="15" y="69.5" width="345" height="300"/>
+                                    <rect key="frame" x="15" y="69.5" width="345" height="232.5"/>
                                     <subviews>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7et-9b-4aA" customClass="BMField" customModule="BeamWallet" customModuleProvider="target">
                                             <rect key="frame" x="15" y="5" width="315" height="22"/>
@@ -121,7 +120,7 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="AQz-dp-S4r" secondAttribute="bottom" constant="77.5" id="07V-97-5R9"/>
+                                        <constraint firstAttribute="bottom" secondItem="AQz-dp-S4r" secondAttribute="bottom" constant="10" id="07V-97-5R9"/>
                                         <constraint firstAttribute="trailing" secondItem="7et-9b-4aA" secondAttribute="trailing" constant="15" id="2KX-eY-vxe"/>
                                         <constraint firstAttribute="trailing" secondItem="hez-Qz-z6Q" secondAttribute="trailing" constant="15" id="3P4-sR-4Fg"/>
                                         <constraint firstItem="AQz-dp-S4r" firstAttribute="top" secondItem="hez-Qz-z6Q" secondAttribute="bottom" constant="30" id="3hU-Ag-0X0"/>
@@ -137,7 +136,7 @@
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seK-ui-jrF" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
-                                    <rect key="frame" x="61" y="369.5" width="253" height="44"/>
+                                    <rect key="frame" x="61" y="352" width="253" height="44"/>
                                     <color key="backgroundColor" red="0.0" green="0.96470588239999999" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="253" id="pzz-da-Ocx"/>
@@ -166,7 +165,7 @@
                                 <constraint firstItem="OLc-86-sdM" firstAttribute="top" secondItem="Dct-LB-tdu" secondAttribute="top" id="KtV-ym-Ynt"/>
                                 <constraint firstItem="seK-ui-jrF" firstAttribute="centerX" secondItem="Dct-LB-tdu" secondAttribute="centerX" id="Uhe-fu-IW7"/>
                                 <constraint firstItem="OLc-86-sdM" firstAttribute="leading" secondItem="Dct-LB-tdu" secondAttribute="leading" constant="15" id="gfb-C4-l0l"/>
-                                <constraint firstItem="seK-ui-jrF" firstAttribute="top" secondItem="vKG-Rj-luv" secondAttribute="bottom" id="jbU-2a-qj0"/>
+                                <constraint firstItem="seK-ui-jrF" firstAttribute="top" secondItem="vKG-Rj-luv" secondAttribute="bottom" constant="50" id="jbU-2a-qj0"/>
                                 <constraint firstItem="vKG-Rj-luv" firstAttribute="leading" secondItem="Dct-LB-tdu" secondAttribute="leading" constant="15" id="k4P-9g-G4z"/>
                                 <constraint firstItem="vKG-Rj-luv" firstAttribute="top" secondItem="OLc-86-sdM" secondAttribute="bottom" constant="50" id="kDT-yZ-DSO"/>
                                 <constraint firstAttribute="trailing" secondItem="vKG-Rj-luv" secondAttribute="trailing" constant="15" id="wXQ-RK-yLu"/>
