--- a/BeamWallet/ViewControllers/Main/Wallet/Transaction/TransactionShareView.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Transaction/TransactionShareView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -70,28 +70,66 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lXv-f9-A2A">
                             <rect key="frame" x="0.0" y="217.5" width="374" height="70"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconBeam" translatesAutoresizingMaskIntoConstraints="NO" id="yle-NJ-oIA">
-                                    <rect key="frame" x="10" y="24" width="22" height="22"/>
+                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TAr-9B-rWa">
+                                    <rect key="frame" x="109.5" y="20.5" width="155" height="29"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconBeam" translatesAutoresizingMaskIntoConstraints="NO" id="uP1-eZ-uBh">
+                                            <rect key="frame" x="0.0" y="3.5" width="22" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="22" id="AMi-LP-7cT"/>
+                                                <constraint firstAttribute="height" constant="22" id="T93-Jj-MyX"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="RECEIVING BEAM" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Hwj-cj-pzj">
+                                            <rect key="frame" x="30" y="6.5" width="117" height="16.5"/>
+                                            <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="14"/>
+                                            <color key="textColor" red="0.043137254899999998" green="0.80000000000000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="22" id="2jw-3o-2y1"/>
-                                        <constraint firstAttribute="width" constant="22" id="YVm-L1-riZ"/>
+                                        <constraint firstItem="uP1-eZ-uBh" firstAttribute="leading" secondItem="TAr-9B-rWa" secondAttribute="leading" id="9kv-Av-CH6"/>
+                                        <constraint firstAttribute="trailing" secondItem="Hwj-cj-pzj" secondAttribute="trailing" constant="8" id="Eng-ZE-GaM"/>
+                                        <constraint firstItem="Hwj-cj-pzj" firstAttribute="centerY" secondItem="TAr-9B-rWa" secondAttribute="centerY" id="NG9-bW-MYH"/>
+                                        <constraint firstItem="Hwj-cj-pzj" firstAttribute="leading" secondItem="uP1-eZ-uBh" secondAttribute="trailing" constant="8" id="RdU-D1-c3c"/>
+                                        <constraint firstItem="uP1-eZ-uBh" firstAttribute="centerY" secondItem="TAr-9B-rWa" secondAttribute="centerY" id="nq9-Gh-83f"/>
                                     </constraints>
-                                </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="RECEIVING BEAM" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="eVK-Ws-tBD">
-                                    <rect key="frame" x="40" y="20.5" width="117" height="29"/>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iap-Xh-GxZ">
+                                    <rect key="frame" x="10" y="20.5" width="175.5" height="29"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconBeam" translatesAutoresizingMaskIntoConstraints="NO" id="yle-NJ-oIA">
+                                            <rect key="frame" x="0.0" y="3.5" width="22" height="22"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="22" id="2jw-3o-2y1"/>
+                                                <constraint firstAttribute="width" constant="22" id="YVm-L1-riZ"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="RECEIVING BEAM" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="eVK-Ws-tBD">
+                                            <rect key="frame" x="30" y="0.0" width="117" height="29"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="HgL-FC-X7f"/>
+                                                <constraint firstAttribute="height" constant="29" id="r6H-P9-rPU"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="14"/>
+                                            <color key="textColor" red="0.043137254899999998" green="0.80000000000000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="HgL-FC-X7f"/>
-                                        <constraint firstAttribute="height" constant="29" id="r6H-P9-rPU"/>
+                                        <constraint firstItem="yle-NJ-oIA" firstAttribute="centerY" secondItem="iap-Xh-GxZ" secondAttribute="centerY" id="NTh-yF-44b"/>
+                                        <constraint firstItem="eVK-Ws-tBD" firstAttribute="leading" secondItem="yle-NJ-oIA" secondAttribute="trailing" constant="8" id="nlA-R7-DKp"/>
+                                        <constraint firstItem="eVK-Ws-tBD" firstAttribute="centerY" secondItem="iap-Xh-GxZ" secondAttribute="centerY" id="rz2-Pt-KgQ"/>
+                                        <constraint firstItem="yle-NJ-oIA" firstAttribute="leading" secondItem="iap-Xh-GxZ" secondAttribute="leading" id="tnp-jq-p6q"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="14"/>
-                                    <color key="textColor" red="0.043137254899999998" green="0.80000000000000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
+                                </view>
                                 <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" axis="vertical" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="eFv-yG-A7p">
-                                    <rect key="frame" x="177" y="20.5" width="187" height="29"/>
+                                    <rect key="frame" x="285.5" y="20.5" width="78.5" height="29"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NhW-G7-nhq">
-                                            <rect key="frame" x="108.5" y="0.0" width="78.5" height="29"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="78.5" height="29"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+ 0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="5iM-tX-TJG">
                                                     <rect key="frame" x="0.0" y="0.0" width="59.5" height="29"/>
@@ -125,14 +163,16 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="0.025979238013698631" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
+                                <constraint firstItem="eFv-yG-A7p" firstAttribute="leading" secondItem="iap-Xh-GxZ" secondAttribute="trailing" constant="100" id="3Ij-7f-8kU"/>
+                                <constraint firstItem="TAr-9B-rWa" firstAttribute="top" secondItem="iap-Xh-GxZ" secondAttribute="top" id="DrW-fQ-3QB"/>
                                 <constraint firstItem="eFv-yG-A7p" firstAttribute="centerY" secondItem="lXv-f9-A2A" secondAttribute="centerY" id="Kud-dn-u5m"/>
-                                <constraint firstItem="yle-NJ-oIA" firstAttribute="centerY" secondItem="lXv-f9-A2A" secondAttribute="centerY" id="aCw-Oy-vfm"/>
-                                <constraint firstItem="eFv-yG-A7p" firstAttribute="leading" secondItem="eVK-Ws-tBD" secondAttribute="trailing" constant="20" id="oBl-UK-LNr"/>
-                                <constraint firstItem="eVK-Ws-tBD" firstAttribute="leading" secondItem="yle-NJ-oIA" secondAttribute="trailing" constant="8" id="qEr-a8-sEn"/>
+                                <constraint firstItem="iap-Xh-GxZ" firstAttribute="centerY" secondItem="lXv-f9-A2A" secondAttribute="centerY" id="NCu-xy-06h"/>
+                                <constraint firstItem="TAr-9B-rWa" firstAttribute="centerY" secondItem="lXv-f9-A2A" secondAttribute="centerY" id="WyT-Ch-T26"/>
+                                <constraint firstItem="iap-Xh-GxZ" firstAttribute="leading" secondItem="lXv-f9-A2A" secondAttribute="leading" constant="10" id="dfv-qo-Zv5"/>
+                                <constraint firstItem="iap-Xh-GxZ" firstAttribute="top" secondItem="eFv-yG-A7p" secondAttribute="top" id="fbY-u7-YRV"/>
                                 <constraint firstAttribute="height" constant="70" id="qVI-bh-hla"/>
-                                <constraint firstItem="yle-NJ-oIA" firstAttribute="leading" secondItem="lXv-f9-A2A" secondAttribute="leading" constant="10" id="r0G-Uv-VZh"/>
                                 <constraint firstAttribute="trailing" secondItem="eFv-yG-A7p" secondAttribute="trailing" constant="10" id="tfe-NP-h9J"/>
-                                <constraint firstItem="eVK-Ws-tBD" firstAttribute="centerY" secondItem="lXv-f9-A2A" secondAttribute="centerY" id="wSP-z9-rZ4"/>
+                                <constraint firstItem="TAr-9B-rWa" firstAttribute="centerX" secondItem="lXv-f9-A2A" secondAttribute="centerX" id="xcv-tu-b3q"/>
                             </constraints>
                         </view>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="CWE-sA-P23">
@@ -297,7 +337,11 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="amountLabel" destination="5iM-tX-TJG" id="QS2-kW-9dd"/>
+                <outlet property="amountStackView" destination="eFv-yG-A7p" id="Ohr-yR-jz9"/>
                 <outlet property="bgView" destination="YxJ-Sh-bxG" id="qiq-Hu-B33"/>
+                <outlet property="centeredStatusIcon" destination="uP1-eZ-uBh" id="a7a-CC-jFW"/>
+                <outlet property="centeredStatusView" destination="TAr-9B-rWa" id="uNm-dY-yzJ"/>
+                <outlet property="centeredTypeLabel" destination="Hwj-cj-pzj" id="Mwv-1I-2IU"/>
                 <outlet property="currencyIcon" destination="4P8-9R-Vmc" id="JJM-I9-tus"/>
                 <outlet property="dateLabel" destination="VgJ-e6-5xs" id="2AI-eN-ElZ"/>
                 <outlet property="height" destination="zO0-BH-qD4" id="2iz-Gk-MSG"/>
@@ -308,7 +352,9 @@
                 <outlet property="senderTitleLabel" destination="mkF-XY-5f2" id="bY6-pQ-P78"/>
                 <outlet property="senderValueLabel" destination="ZsA-m5-M14" id="2A8-Xe-kKP"/>
                 <outlet property="statusIcon" destination="yle-NJ-oIA" id="lGP-vx-gb7"/>
+                <outlet property="statusView" destination="iap-Xh-GxZ" id="0U3-Lq-JT9"/>
                 <outlet property="titleLabel" destination="tdB-jd-WyH" id="GZj-Pa-bBc"/>
+                <outlet property="topView" destination="lXv-f9-A2A" id="6kb-Rj-rxj"/>
                 <outlet property="transactionFeeTitleLabel" destination="J35-0v-eA0" id="SLi-GA-3zM"/>
                 <outlet property="transactionFeeValueLabel" destination="gQZ-Bk-Iet" id="Cko-zJ-iQr"/>
                 <outlet property="transactionIDTitleLabel" destination="pKV-NA-KQs" id="3Mr-vC-acu"/>
@@ -324,6 +370,6 @@
         <image name="iconBeam" width="22" height="22"/>
         <image name="iconSymbol" width="16" height="24.5"/>
         <image name="initial_background" width="1125" height="2001"/>
-        <image name="logo" width="101" height="89"/>
+        <image name="logo" width="159" height="139"/>
     </resources>
 </document>
