https://github.com/BeamMW/ios-wallet/issues/366

--- a/BeamWallet/ViewControllers/Main/Wallet/Cells/OnboardCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Cells/OnboardCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -134,6 +134,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="wOQ-Dl-WbO"/>
             <connections>
+                <outlet property="closeButton" destination="vMt-4s-6Xc" id="jRU-63-7pG"/>
                 <outlet property="detailLabel" destination="W9G-Kl-yaQ" id="cTi-rL-8pg"/>
                 <outlet property="mainView" destination="T6E-5r-FVj" id="ZKd-uj-cvz"/>
                 <outlet property="receiveButton" destination="aUk-NL-Gc4" id="D4j-b4-Ty2"/>
